test: upgrade test

--- a/packages/book/docs/zh/使用方法.md
+++ b/packages/book/docs/zh/使用方法.md
@@ -5,10 +5,10 @@
 Inkdown Book使用Nodejs与Remix框架构建，所以需要部署一段Nodejs程序。如果您使用`Docker`，部署过程将十分简单。只需执行以下命令：
 
 ```sh
-curl -fsSL https://github.com/1943time/bluestone-service/releases/latest/download/install.sh | bash
+curl -fsSL https://github.com/1943time/inkdown-book/releases/latest/download/install.sh | bash
 cd inkdown-book
 docker build -t inkdown-book-image .
-docker run -d --name inkdown-book -p 3006:80 inkdown-book-image
+docker run -d --name inkdown-book -p 3006:3000 inkdown-book-image
 ```
 
 容器运行后我们将暴露3006端口，现在使用Nginx将域名代理至3006端口，配置如下：
@@ -75,7 +75,7 @@ docker exec -it inkdown-book bash
 cat .env
 ```
 
-将id于secret参数复制到vscode配置中。
+将id和secret参数复制到vscode配置中。
 
 每个共享文件夹需要一个配置文件，他的目录是 `共享文件夹`-> `.inkdown`-> `settings.json`
 
@@ -132,4 +132,3 @@ cat .env
 - nav 可以添加外部链接，可以使用items字段添加链接目录。
 
 以上是Inkdown Book目前支持的配置字段，现在让我们把他共享至网络。在zh文件夹上点击右键，选择`Publish to Inkdown Book` 。等待片刻即可查看该文档。
-
