docs: Add usage documentation

--- a/packages/book/docs/zh/简介.md
+++ b/packages/book/docs/zh/简介.md
@@ -4,20 +4,21 @@ Inkdown Book 是一个Markdown文档阅读与共享工具，与目前很多的Ma
 
 由于不需要在客户端安装nodejs运行环境，所以Inkdown的使用起来会比较简单，也不需要任何编程知识，非前端开发者使用也会更加容易。
 
-主流文档站生成工具有 [Vitepress](https://vitepress.dev/), [Docusaurus](https://docusaurus.io/) 等。
-
 > Inkdown Book使用`GitHub Flavored Markdown`标准，也是绝大多数编辑器兼容的格式。
 > 
 > 本文档也是由InkdownBook生成。
 
 ## 对比
 
-与主流Markdown文档站进行对比，以便于快速地了解他们的区别。
+与主流Markdown文档站进行对比，以便于快速地了解他们的区别。主流文档站生成工具有  [Vitepress](https://vitepress.dev/) ,  [Docusaurus](https://docusaurus.io/)  等。
 
-| 主流文档站生成工具                                                | Inkdown Book                                                                                                   |
+| 文档站点生成工具                                                  | Inkdown Book                                                                                                   |
 | ----------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------- |
 | 需要构建工具，需要安装nodejs环境，每次更改需要重新部署至服务器。  | 通过vscode扩展、InkdownEditor、Cli等工具进行同步内容，不需要构建与服务器部署。                                 |
 | 每个文档站都需要一个域名，一般作为一个产品的独立介绍网站。        | 一个域名访问任意个文件夹内容。一般作为轻量级的Markdown共享工具，随时共享任何文件夹内容，如代码仓库的介绍文档。 |
-| 可以生成静态站点和首页。                                          | 服务端动态渲染，暂不支持生成首页。所以需要部署一次Nodejs程序。                                                 |
-| 拥有更多的定制语法，预编译可以拥有引入react、vue、mdx组件的能力。 | 没有复杂的构建过程，目前仅支持标准的Markdown语法。                                                             |
+| 可以生成静态站点和首页。                                          | 服务端动态渲染，所以需要部署一次Nodejs程序，暂不支持生成首页。                                                 |
+| 拥有更多的定制语法，预编译可以拥有引入react、vue、mdx组件的能力。 | 没有预编译构建过程，目前仅支持标准的Markdown语法。                                                             |
 
+
+
+总结：如果你希望使用更多定制Markdown语法或者自定义组件，并且希望作为您产品的文档主要站点，主流文档生成工具是更好的选择，如果您希望更简单快速的将Markdown文档随时分享给团队或他人，不想每次更新都使用构建 -> 部署，这一套流程Inkdown Book是更好的选择。
