feat: Resume github detection update

--- a/packages/book/docs/zh/使用方法.md
+++ b/packages/book/docs/zh/使用方法.md
@@ -8,10 +8,10 @@ Inkdown Book使用Nodejs与Remix框架构建，所以需要部署一段Nodejs程
 curl -fsSL https://github.com/1943time/inkdown-book/releases/latest/download/install.sh | bash
 cd inkdown-book
 docker build -t inkdown-book-image .
-docker run -d --name inkdown-book -p 3000:3000 inkdown-book-image
+docker run -d --name inkdown-book -p 3006:3000 inkdown-book-image
 ```
 
-容器运行后我们将暴露3006端口，现在使用Nginx将域名代理至3006端口，配置如下：
+容器运行后我们将暴露3000端口，现在使用Nginx将域名代理至3000端口，配置如下：
 
 ```nginx
 server {
@@ -47,11 +47,11 @@ server {
 }
 ```
 
-服务程序已部署完成，现在我们可以共享任意Markdown文件夹了。如果您不希望使用`Docker`部署，可手[动安装nodejs运行环境](#手动安装nodejs运行环境)。
+服务程序已部署完成，现在我们可以共享任意Markdown文件夹了。如果您不希望使用`Docker`部署，可手动安装nodejs运行环境。
 
 ## Visual Studio Code
 
-Inkdown Book目前支持2种共享文档方式，使用Vscode扩展，Inkdown Editor。我们先以Vscode扩展为例。
+Inkdown Book目前支持3种共享文档方式，使用Vscode扩展，Inkdown Editor, 和Cli。我们先以Vscode扩展为例。
 
 Inkdown的Vscode扩展是一个Markdown所见即所得编辑器，同时也支持将Markdown文档部署至Inkdown Book。他们之间并不互相依赖，如果您仅希望使用所见即所得编辑器或者仅共享文档都可以使用该扩展。
 
@@ -76,9 +76,9 @@ cat .env
 
 每个共享文件夹需要一个配置文件，他的目录是 `共享文件夹`-> `.inkdown`-> `settings.json`
 
-现在我们在文档文件夹中创建该配置文件，或者右键需要发布的文件夹，选择`Publish to inkdown book`扩展会询问是否自动创建配置文件。
+现在我们在文档文件夹中创建该配置文件
 
-<img src=".images/MMhLde7u29nSdln.png" alt="" height="218" />
+> 图片
 
 配置文件内容如下：
 
@@ -129,42 +129,3 @@ cat .env
 - nav 可以添加外部链接，可以使用items字段添加链接目录。
 
 以上是Inkdown Book目前支持的配置字段，现在让我们把他共享至网络。在zh文件夹上点击右键，选择`Publish to Inkdown Book` 。等待片刻即可查看该文档。
-
-## 资源处理
-
-在同步文档时，Inkdown会自动上传文档所依赖的图片文件，已上传过的图片不会再次上传。
-
-使用文件路径链接到其他Markdown文件则会转换为网络连接例如： `./Start.md`, 也可以用`#`号来添加锚点
-
-## 删除
-
-在Vscode扩展中，使用`mod+shift+p` 搜索命令 `Open Inkdown management page`可以打开并登录Inkdown Book 管理页面。在管理页面中可删除已发布的文件夹。
-
-也可以直接打开`绑定域名/inkdown-login`使用keyId与keySecret登录。
-
-当删除发布的文件夹后，其依赖的图片文件也会自动从服务端删除。
-
-## 手动安装Nodejs运行环境
-
-如果您不想使用Docker部署，也可以手动安装Nodejs运行环境，过程如下：
-
-部署程序不支持过低的Linux版本，在以下版本中选择。
-
-- `centos` 8+
-- `ubuntu` 20+
-- `debian` 10+
-
-```sh
-curl -fsSL https://github.com/1943time/inkdown-book/releases/latest/download/install.sh | bash
-cd inkdown-book
-apt install unzip
-curl -fsSL https://fnm.vercel.app/install | bash
-source $HOME/.bashrc
-fnm install 20
-corepack enable
-pnpm i
-pnpm i pm2 -g
-pm2 start ecosystem.config.cjs
-```
-
-默认启动 `3000` 端口，程序启动后即可使用nginx将域名代理至共享程序。
