--- a/packages/book/docs/zh/使用方法.md
+++ b/packages/book/docs/zh/使用方法.md
@@ -47,7 +47,7 @@ server {
 }
 ```
 
-服务程序已部署完成，现在我们可以共享任意Markdown文件夹了。如果您不希望使用`Docker`部署，可手动安装nodejs运行环境。
+服务程序已部署完成，现在我们可以共享任意Markdown文件夹了。如果您不希望使用`Docker`部署，可手动安装[nodejs运行环境](#手动安装nodejs运行环境)。
 
 ## Visual Studio Code
 
@@ -76,11 +76,7 @@ cat .env
 
 每个共享文件夹需要一个配置文件，他的目录是 `共享文件夹`-> `.inkdown`-> `settings.json`
 
-现在我们在文档文件夹中创建该配置文件
-
-> 图片
-
-配置文件内容如下：
+现在我们在文档文件夹中创建该配置文件 配置文件内容如下：
 
 ```json
 {
@@ -129,3 +125,42 @@ cat .env
 - nav 可以添加外部链接，可以使用items字段添加链接目录。
 
 以上是Inkdown Book目前支持的配置字段，现在让我们把他共享至网络。在zh文件夹上点击右键，选择`Publish to Inkdown Book` 。等待片刻即可查看该文档。
+
+## 资源处理
+
+在同步文档时，Inkdown会自动上传文档所依赖的图片文件，已上传过的图片不会再次上传。
+
+使用文件路径链接到其他Markdown文件则会转换为网络连接例如：  `./Start.md` , 也可以用 # 号来添加锚点
+
+## 删除
+
+在Vscode扩展中，使用 `mod+shift+p`  搜索命令  `Open Inkdown management page` 可以打开并登录Inkdown Book 管理页面。在管理页面中可删除已发布的文件夹。
+
+也可以直接打开 `绑定域名/inkdown-login` 使用keyId与keySecret登录。
+
+当删除发布的文件夹后，其依赖的图片文件也会自动从服务端删除。
+
+## 手动安装Nodejs运行环境
+
+如果您不想使用Docker部署，也可以手动安装Nodejs运行环境，过程如下：
+
+部署程序不支持过低的Linux版本，在以下版本中选择。
+
+-  centos  8+
+-  ubuntu  20+
+-  debian  10+
+
+```sh
+curl -fsSL https://github.com/1943time/inkdown-book/releases/latest/download/install.sh | bash
+cd inkdown-book
+apt install unzip
+curl -fsSL https://fnm.vercel.app/install | bash
+source $HOME/.bashrc
+fnm install 20
+corepack enable
+pnpm i
+pnpm i pm2 -g
+pm2 start ecosystem.config.cjs
+```
+
+默认启动  3000  端口，程序启动后即可使用nginx将域名代理至共享程序。
