--- a/packages/book/docs/zh/使用方法.md
+++ b/packages/book/docs/zh/使用方法.md
@@ -130,7 +130,7 @@ cat .env
 
 在同步文档时，Inkdown会自动上传文档所依赖的图片文件，已上传过的图片不会再次上传。
 
-使用文件路径链接到其他Markdown文件则会转换为网络连接例如：  `./Start.md` , 也可以用 # 号来添加锚点
+使用文件路径链接到其他Markdown文件则会转换为网络连接例如：  `./Start.md` , 也可以用 `#` 号来添加锚点
 
 ## 删除
 
