--- a/packages/book/docs/zh/编辑器.md
+++ b/packages/book/docs/zh/编辑器.md
@@ -1,6 +1,6 @@
-# Inkdown编辑器
+# Inkdown编辑器1
 
-Inkdown是一个Markdown所见即所得编辑器，目标为改善Markdown编辑和阅读体验，Markdown作为通用格式非常适合存储个人数据，但是过多的符号导致它并不擅长长文本记录。Inkdown希望保持现代编辑器体验，与Markdown的通用性，并提供最简单高效的文档共享能力。
+Inkdown是一个Markdown所见即所得编辑器，目标为改善Markdown编辑和阅读体验，Markdown作为通用格式非常适合存储个人数据，但是过多的符号导致它并不擅长长文本记录和阅读。Inkdown希望保持现代编辑器体验，与Markdown的通用性，并提供最简单高效的文档共享能力。2
 
 | VsCode                                                                         | Mac                                                                                                                                                                                 | Windows                                                                                                                                                                               | Linux                                                          |
 | ------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------- |
@@ -12,7 +12,7 @@ Inkdown是一个Markdown所见即所得编辑器，目标为改善Markdown编辑
 
 VsCode
 
-![](.images/ZCuwR91nG1WeRW9.png)
+![](../.images/6xjoQYS7Jnqbtwn.png)
 
 你可以使用浮动栏中的链接选项为文本添加链接，链接可以是空间内的其他 markdown 文件，也可以是 HTTP 等协议地址。如下图所示：
 
