docs: update docs

--- a/packages/book/docs/zh/简介.md
+++ b/packages/book/docs/zh/简介.md
@@ -6,7 +6,7 @@ Inkdown Book 是一个Markdown文档阅读与共享工具，与目前很多的Ma
 
 > Inkdown Book使用`GitHub Flavored Markdown`标准，也是绝大多数编辑器兼容的格式。
 > 
-> 本文档也是由InkdownBook生成。
+> 本文档也是由`InkdownBook`生成。
 
 ## 对比
 
