--- a/packages/book/docs/zh/编辑器.md
+++ b/packages/book/docs/zh/编辑器.md
@@ -1,6 +1,6 @@
-# Inkdown编辑器1
+# Inkdown编辑器
 
-Inkdown是一个Markdown所见即所得编辑器，目标为改善Markdown编辑和阅读体验，Markdown作为通用格式非常适合存储个人数据，但是过多的符号导致它并不擅长长文本记录和阅读。Inkdown希望保持现代编辑器体验，与Markdown的通用性，并提供最简单高效的文档共享能力。2
+Inkdown是一个Markdown所见即所得编辑器，目标为改善Markdown编辑和阅读体验，Markdown作为通用格式非常适合存储个人数据，但是过多的符号导致它并不擅长长文本记录和阅读。Inkdown希望保持现代编辑器体验，与Markdown的通用性，并提供最简单高效的文档共享能力。
 
 | VsCode                                                                         | Mac                                                                                                                                                                                 | Windows                                                                                                                                                                               | Linux                                                          |
 | ------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------- |
