--- a/packages/book/docs/zh/使用方法.md
+++ b/packages/book/docs/zh/使用方法.md
@@ -25,6 +25,9 @@ server {
     # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     # ssl_prefer_server_ciphers on;
     server_name  docs.inkdown.cn;
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
     gzip on;
     gzip_comp_level 6;
     gzip_min_length 1k;
@@ -51,7 +54,7 @@ server {
 
 ## Visual Studio Code
 
-Inkdown Book目前支持3种共享文档方式，使用Vscode扩展，Inkdown Editor, 和Cli。我们先以Vscode扩展为例。
+Inkdown Book目前支持3种共享文档方式，使用Vscode扩展，Inkdown Editor, 和Cli(未完成)。我们先以Vscode扩展为例。
 
 Inkdown的Vscode扩展是一个Markdown所见即所得编辑器，同时也支持将Markdown文档部署至Inkdown Book。他们之间并不互相依赖，如果您仅希望使用所见即所得编辑器或者仅共享文档都可以使用该扩展。
 
@@ -146,9 +149,9 @@ cat .env
 
 部署程序不支持过低的Linux版本，在以下版本中选择。
 
--  centos  8+
--  ubuntu  20+
--  debian  10+
+-  `centos`  8+
+-  `ubuntu`  20+
+-  `debian`  10+
 
 ```sh
 curl -fsSL https://github.com/1943time/inkdown-book/releases/latest/download/install.sh | bash
